# video_captioning

./: .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  README.md  dvc.yaml  pyproject.toml  setup_data.py
.dvc/: .gitignore
configs/: advanced.yaml  baseline.yaml
configs/dataset/: msr_vtt.yaml
configs/model/: advanced.yaml  baseline.yaml
configs/training/: trainer.yaml
configs/triton/: advanced_onnx.pbtxt  advanced_trt.pbtxt  baseline_onnx.pbtxt  baseline_trt.pbtxt
scripts/: build_trt_engine.sh  check_data.py  run_triton_server.sh  triton_smoke.py
video_captioning/: __init__.py  commands.py
video_captioning/data/: dataset.py
video_captioning/evaluation/: __init__.py  metrics.py
video_captioning/inference/: __init__.py  inference.py
video_captioning/models/: __init__.py  model.py
video_captioning/onnx/: export.py
video_captioning/training/: __init__.py  lightning_module.py  lightning_module_advanced.py  train_advanced.py  train_baseline.py  val_logging.py
video_captioning/utils/: config.py  experiment_tracking.py  logging.py  mlflow_export.py
