[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "video-captioning"
version = "0.1.0"
description = "Video captioning model with ResNet-50 visual encoder and LSTM text decoder"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Video Captioning Team"}
]
license = {text = "MIT"}

dependencies = [
    # Core ML/DL
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pytorch-lightning>=2.0.0",

    # HuggingFace & Data
    "huggingface-hub>=0.16.0",
    "datasets>=2.10.0",
    "dvc>=3.0.0",
    "dvc[gdrive]>=3.0.0",

    # Processing & Augmentation
    "opencv-python>=4.8.0",
    "numpy>=1.23.0",
    "pillow>=9.5.0",
    "albumentations>=1.3.0",

    # Tokenization
    "tokenizers>=0.13.0",
    "sentencepiece>=0.1.99",

    # Configuration
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",

    # Logging
    "mlflow>=2.0.0",
    "tensorboard>=2.13.0",

    # Metrics
    "nltk>=3.8.0",
    "sacrebleu>=2.3.0",

    # Plot export (assignment)
    "matplotlib>=3.7.0",

    # Vision models
    "timm>=0.9.0",

    # CLI
    "fire>=0.5.0",

    # Utils
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "pre-commit>=3.0.0",
    "pytest>=7.3.0",
    "pytest-cov>=4.1.0",
]

export = [
    "onnx>=1.12.0",
    "onnxruntime>=1.15.0",
]

serve = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
]

[tool.uv]
dev-dependencies = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "pre-commit>=3.0.0",
    "pytest>=7.3.0",
    "pytest-cov>=4.1.0",
]

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["video_captioning"]
skip_glob = ["*/migrations/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=video_captioning --cov-report=html"

[tool.coverage.run]
source = ["video_captioning"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
